[tool.poetry]
name = "nixops-with-vbox"
version = "0.1.0"
description = ""
authors = ["Graham Christensen <graham@grahamc.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git", branch="revert-1369-nixpkgs-network"}
# nixops = {git = "https://github.com/grahamc/nixops.git", branch="context-manager-states-rebase"}
nixopsvbox = {git = "https://github.com/nix-community/nixops-vbox.git", branch="master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
